# newproject

inventryservice/: pyproject.toml
inventryservice/inventryservice/: crud.py  db.py  main.py  models.py  schemas.py
notificationservice/: Dockerfile.dev  pyproject.toml
notificationservice/notificationservice/: crud.py  db.py  main.py  models.py  schema .py
orderservice/: Dockerfile.dev  pyproject.toml
orderservice/orderservice/: main.py
paymentservice/: .env  Dockerfile.dev  compose.yaml
paymentservice/paymentservice/: crud.py  db.py  main.py  models.py  payment.html  schemas.py  settings.py
productservice/: .env  Dockerfile.dev  compose.yaml  pyproject.toml
productservice/productservice/: crud.py  db.py  main.py  models.py  schema .py
userservice/: Dockerfile.dev  pyproject.toml
userservice/userservice/: main.py
