[tool.poetry]
name = "notificationservice"
version = "0.1.0"
description = ""
authors = ["meer004 <165077536+meer004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.18"
aiokafka = "^0.10.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
alembic = "^1.13.1"
slowapi = "^0.1.9"
protobuf = "^5.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
